# rasberry_coordination

./: .gitignore  .runcom  CMakeLists.txt  README.md  Sun 20 Nov 20:24:55 GMT 2022 - coordinator_output.txt  package.xml  setup.cfg  setup.py
config/: logmsg.yaml  map_config_clockhouse.yaml  map_config_corner_hokuyos_riseholme_06-2019.yaml  map_config_default.yaml  map_config_norway-hayfield.yaml  map_config_norway_poles.yaml  map_config_norway_poles_sim.yaml  map_config_riseholme.yaml  map_config_riseholme_sim.yaml  map_config_template.yaml  map_config_template_1.1.0.yaml  map_config_template_1.2.0.yaml  map_config_template_1.2.1.yaml  map_config_template_1.2.2.yaml  rviz_structures.yaml  sample_rb_task_coordination.yaml  topological_presence_agents.yaml
config/agent/: picker01.yaml  picker01.yaml.orig  picker01_debug.yaml  picker01_virtual.yaml  picker02.yaml  picker02.yaml.orig  picker101.yaml  picker101.yaml.orig  uv1.yaml  (+13 more)
core/: package.xml
docs/: Actions.md  Agents.md  Debug_Agents.md  Defining_a_New_Module.md  Extending_a_Module.md  ITAASQE.md  Interfaces.md  Main-Loop.md  Navigation-and-Route_Planners.md  StageList.md  Stages.md  Virtual_Agents.md
launch/: add_agent.launch  agent_marker_publisher.launch  debug_robot.launch  new_simple_task_coordinator.launch  restricted_maps.launch  restricted_short_map.launch  robot_websocket_adapter.launch  robot_websocket_adapter_multisim.launch  robot_websocket_toponav_adapter.launch  robot_websocket_toponav_adapter_multisim.launch  simple_task_coordinator.launch
msg/: Agent.msg  AgentDetails.msg  AgentHealth.msg  AgentList.msg  AgentLocation.msg  AgentLocationList.msg  AgentRendering.msg  AgentState.msg  AgentStateList.msg  AllSchedulableTasks.msg  Interruption.msg  MarkerDetails.msg  Module.msg  NewAgentConfig.msg  OldAgentLocation.msg  OldAgentLocationList.msg  OldAgentRegistration.msg  OldAgentRegistrationList.msg  OldAgentState.msg  OldAgentStateList.msg  README.md  SchedulableTasks.msg  Task.msg  TaskContents.msg  TaskDetails.msg  TaskRole.msg  TaskSchedule.msg  TaskStatus.msg  TasksDetails.msg  TopoLocation.msg
msgs/: CMakeLists.txt
profiling/: export-data.prof  export-data_2022-03-06 21:28:36.834863.prof  export-data_2022-03-06-21:32:55.569094.prof  export-data_2022-03-06-21:58:49.344793.prof  export-data_2022-03-06-22:09:54.205741.prof  export-data_2022-03-06-22:30:22.562422.prof
rasberry_coordination/: coordinator_tools.py  logging.py  ui_speaker.py
rasberry_coordinator_core/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rasberry_coordinator_core/config/: coord_config.yaml  logmsg.yaml
rasberry_coordinator_core/config/setup/: general_robot_debug.yaml  scheduler.yaml
rasberry_coordinator_core/config/setup/old/: picker_debug.yaml
rasberry_coordinator_core/new_tmule/shell/: mongo.sh  rviz.sh
rasberry_coordinator_core/rasberry_coordination_core/: add_agent.py  agent_markers.py  coordinator.py  coordinator_node.py  core.py  logging_test.py  logmsg_utils.py  node.py  rasberry_coordinator.py  restrictor.py  root_inspector.py  speaker.py
rasberry_coordinator_core/rasberry_coordination_core/agent_management/: location_handler.py  manager.py
rasberry_coordinator_core/rasberry_coordination_core/interaction_management/: manager.py
rasberry_coordinator_core/rasberry_coordination_core/ros2_nodes/: add_agent.py  rviz_markers.py
rasberry_coordinator_core/rasberry_coordination_core/routing_management/: base_planner.py  fragment_planner.py  manager.py
rasberry_coordinator_core/rasberry_coordination_core/rviz_markers/: markers.py  tf_publisher.py
rasberry_coordinator_core/rasberry_coordination_core/task_management/: __init__.py  dynamic_task_management.py  manager.py
rasberry_coordinator_core/rasberry_coordination_core/task_management/containers/: Module.py  Task.py
rasberry_coordinator_core/rasberry_coordination_core/task_management/modules/assignment/: stage_definitions.py
rasberry_coordinator_core/rasberry_coordination_core/task_management/modules/assignment/interfaces/: SchedulerManager.py
rasberry_coordinator_core/rasberry_coordination_core/task_management/modules/base/: stage_definitions.py
rasberry_coordinator_core/rasberry_coordination_core/task_management/modules/base/interfaces/: DTMInterface.py  Empty.py  Human.py  Interface.py  LocalisedHuman.py  Robot.py  StateInterface.py
rasberry_coordinator_core/rasberry_coordination_core/task_management/modules/navigation/: stage_definitions.py
rasberry_coordinator_core/rasberry_coordination_core/task_management/modules/navigation/interfaces/: Empty.py  GeneralNavigator.py  Human.py  Robot.py  RobotDebug.py  __init__.py
rasberry_coordinator_core/rasberry_coordination_core/topomap_management/: map_handler.py  occupancy.py
rasberry_coordinator_core/rasberry_coordination_core/topomap_management/filters/: no_nodes_with_presence.py  no_rows_with_presence.py
rasberry_coordinator_core/rasberry_coordination_core/utils/: logmsg.py  root_inspector.py
rasberry_coordinator_core/scripts/: coordinator.py
rasberry_coordinator_msgs/: CMakeLists.txt  package.xml
rasberry_coordinator_msgs/msg/: AgentList.msg  AgentLocation.msg  MarkerDetails.msg  NewAgentConfig.msg  Task.msg  TasksDetails.msg  TopoLocation.msg
scripts/: .add_agent.py.swp  abstract_task_executor_node.py  add_agent.py  add_agent.sh  add_agent_mqtt.py  agent_monitor.py  initialise_debug_agent_position.py  initialise_virtual_agent_position.py  manual_route.py  new_simple_task_executor_node.py  pose_frame_publisher.py  publish_virtual_agent_position.py  reset_picker.py  robot_speakers.py  rviz_markers.py  rviz_virtual_publisher.py  simple_task_executor_node.py  ui_speaker.py  ui_speaker_broadcast.py  visualise_agent_markers.py
srv/: AddAgent.srv  AgentID.srv  AgentNodePair.srv  ConnectAgent.srv  ConnectRobot.srv  DisconnectRobot.srv  QueryBattery.srv  RegisterRobot.srv  ResetPicker.srv  SetLocation.srv  SetPickerNode.srv  StringSrv.srv  TriggerRobot.srv  UnregisterAgent.srv  UnregisterRobot.srv  UpdateTask.srv
testing/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
(+329 files in other folders)
