<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rasberry_coordination</name>
  <version>0.1.0</version>
  <description>The rasberry_coordination package</description>

  <maintainer email="primordia@live.com">james</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>python-transforms3d-pip</depend>
  <depend>espeak</depend>

  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>

<!--
  <depend>rosbridge_server</depend>
  <depend>rosduct</depend>
  <depend>rospy</depend>

  <depend>topic_tools</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>actionlib</depend>
  <depend>std_srvs</depend>

  <depend>strands_executive_msgs</depend>
  <depend>strands_navigation_msgs</depend>
  <depend>topological_navigation_msgs</depend>

  <depend>rasberry_des</depend>
  <depend>rasberry_people_perception</depend>
  <depend>topological_navigation</depend>

  <depend>espeak</depend>
-->

  <export>
<!--    <build_type>ament_python</build_type> -->
    <build_type>ament_cmake</build_type>
  </export>
</package>


