<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rasberry_coordination_core</name>
  <version>1.3.0</version>
  <description>The rasberry_coordination_core package</description>

  <maintainer email="primordia@live.com">james</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>python-transforms3d-pip</depend>
  <depend>espeak</depend>

<!--
  <depend>strands_executive_msgs</depend>
  <depend>strands_navigation_msgs</depend>

  <depend>topological_navigation_msgs</depend>
  <depend>topological_navigation</depend>
-->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>





